# fastapi-dynamodb-template

./: .gitignore  README.md  compose.yml
client/: .eslintrc.cjs  Dockerfile  README.md  package-lock.json  package.json
client/src/: App.jsx
nginx/: Dockerfile
nginx/configs/: default.conf
server/: .env  Dockerfile  pyproject.toml  setup_dev_db.py
server/app/: auth.py  main.py  settings.py
server/app/routers/: users.py
server/app/schemas/: users.py
server/app/tests/api/: client.py  conftest.py  test_users.py
server/scripts/: setup_dev_db.py
