[tool.poetry]
name = "list app backend"
version = "0.0.0"
description = "my list app"

license = "MIT"

authors = ["Daniel Hartman <djhrtmn@icloud.com>"]

repository = "https://github.com/dj/list"
homepage = "https://example.com"

readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.101.0"
uvicorn = "^0.15.0"
pydantic = "^2.1.1"
boto3 = "^1.28.0"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
httpx = "^0.24.1"
pydantic-settings = "^2.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
